Post developer to proyect - done

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <Folder Include="Developers\Command\" />
     <Folder Include="Developers\EventHandlers\" />
+    <Folder Include="Proyects\Command\Response\" />
     <Folder Include="Proyects\EventHandlers\" />
   </ItemGroup>
 
