--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -9,24 +9,25 @@
   <ItemGroup>
     <Compile Remove="Developers\Command\**" />
     <Compile Remove="Developers\EventHandlers\**" />
+    <Compile Remove="Proyects\Command\Response\**" />
     <Compile Remove="Proyects\EventHandlers\**" />
     <EmbeddedResource Remove="Developers\Command\**" />
     <EmbeddedResource Remove="Developers\EventHandlers\**" />
+    <EmbeddedResource Remove="Proyects\Command\Response\**" />
     <EmbeddedResource Remove="Proyects\EventHandlers\**" />
     <None Remove="Developers\Command\**" />
     <None Remove="Developers\EventHandlers\**" />
+    <None Remove="Proyects\Command\Response\**" />
     <None Remove="Proyects\EventHandlers\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.8.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Proyects\Command\Response\" />
   </ItemGroup>
 
   <ItemGroup>
